# perception

autoware/: extract_frame.py
autoware/src/launch/: autoware_perception.xml
autoware/src/launch/perception/autoware_object_detector/: README.md  install_onnxruntime.sh  package.xml
autoware/src/launch/perception/autoware_object_detector/config/: yolo12.param.yaml
autoware/src/launch/perception/autoware_object_detector/include/: object_detector_node.hpp
autoware/src/launch/perception/autoware_object_detector/include/det/: YOLO10.hpp  YOLO12.hpp
autoware/src/launch/perception/autoware_object_detector/src/: object_detector_node.cpp
autoware/src/launch/perception/autoware_roi_cluster_fusion/src/roi_cluster_fusion/: package.xml
autoware/src/launch/perception/autoware_roi_cluster_fusion/src/roi_cluster_fusion/include/roi_cluster_fusion/: roi_cluster_fusion_node.hpp
autoware/src/launch/perception/autoware_roi_cluster_fusion/src/roi_cluster_fusion/src/: roi_points_fusion_node.cpp  roi_points_fusion_visualizer_node.cpp
autoware/src/launch/perception/autoware_roi_points_fusion/: CMakeLists.txt  package.xml
autoware/src/launch/perception/autoware_roi_points_fusion/include/autoware_roi_points_fusion/: roi_points_fusion_node.hpp
autoware/src/launch/perception/autoware_roi_points_fusion/src/: roi_points_fusion_visualizer_node.cpp
autoware/src/launch/perception/video converter/src/video_converter/: package.xml  setup.py
autoware/src/launch/perception/video converter/src/video_converter/video_converter/: video_converter_node.py
autoware/src/perception/autoware_object_detector/: CMakeLists.txt
autoware/src/perception/autoware_object_detector/launch/: object_detector.launch.xml
autoware/src/perception/autoware_roi_cluster_fusion/src/roi_cluster_fusion/: CMakeLists.txt
autoware/src/perception/autoware_roi_cluster_fusion/src/roi_cluster_fusion/include/roi_points_fusion/: roi_points_fusion_node.hpp  roi_points_fusion_visualizer_node.hpp
autoware/src/perception/autoware_roi_cluster_fusion/src/roi_cluster_fusion/launch/: roi_points_fusion.launch.xml
autoware/src/perception/autoware_roi_cluster_fusion/src/roi_cluster_fusion/src/: roi_cluster_fusion_node.cpp
autoware/src/perception/autoware_roi_points_fusion/: README.md
autoware/src/perception/autoware_roi_points_fusion/config/: roi_points_fusion_node.param.yaml
autoware/src/perception/autoware_roi_points_fusion/include/autoware_roi_points_fusion/: roi_points_fusion_visualizer_node.hpp
autoware/src/perception/autoware_roi_points_fusion/launch/: roi_points_fusion.launch.xml
autoware/src/perception/autoware_roi_points_fusion/src/: roi_points_fusion_node.cpp
autoware/src/perception/video converter/src/video_converter/: setup.cfg
autoware_data/object_detector/labels/: autoware.names
autoware_data/object_detector/models/: label_2.names  yolo10n_uint8.onnx
